--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "Petr Broz <petr.broz@autodesk.com>",
   "dependencies": {
+    "commander": "^2.19.0",
     "express": "^4.16.4",
     "node-fetch": "^2.3.0",
     "node-zip": "^1.1.1"
