Renamed project to forge-convert-utils.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "forge-extract",
+  "name": "forge-convert-utils",
   "version": "0.2.1",
   "description": "Tools for converting Autodesk Forge file formats.",
   "main": "lib/index.js",
   "bin": {
-    "forge-extract": "./cli.js"
+    "forge-convert": "./cli.js"
   },
   "scripts": {
     "build": "tsc",
@@ -21,12 +21,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/petrbroz/forge-extract.git"
+    "url": "git+https://github.com/petrbroz/forge-convert-utils.git"
   },
   "bugs": {
-    "url": "https://github.com/petrbroz/forge-extract/issues"
+    "url": "https://github.com/petrbroz/forge-convert-utils/issues"
   },
-  "homepage": "https://github.com/petrbroz/forge-extract#readme",
+  "homepage": "https://github.com/petrbroz/forge-convert-utils#readme",
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/fs-extra": "^8.0.0",
