--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "adm-zip": "^0.4.13",
     "commander": "^3.0.2",
     "forge-server-utils": "^7.0.0",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "gltf-pipeline": "^2.1.4"
   }
 }
