--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tools for converting Autodesk Forge file formats.",
   "main": "lib/index.js",
   "bin": {
-    "forge-convert": "./cli.js"
+    "forge-convert": "./bin/forge-convert.js"
   },
   "scripts": {
     "build": "tsc",
