Removed post-processing modules...
... and instead including examples of how this library can be integrated with other glTF tools.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/fs-extra": "^8.0.0",
-    "gltf-validator": "^2.0.0-dev.2.7",
     "typedoc": "^0.15.0",
     "typescript": "^3.6.3"
   },
@@ -40,7 +39,6 @@
     "adm-zip": "^0.4.13",
     "commander": "^3.0.2",
     "forge-server-utils": "^7.0.0",
-    "fs-extra": "^8.1.0",
-    "gltf-pipeline": "^2.1.4"
+    "fs-extra": "^8.1.0"
   }
 }
