--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/fs-extra": "^8.0.0",
+    "gltf-validator": "^2.0.0-dev.3.2",
     "typedoc": "^0.15.0",
     "typescript": "^3.7.0"
   },
