--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.13",
+    "bson": "^4.4.1",
     "commander": "^3.0.2",
     "forge-server-utils": "^8.2.2",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "msgpack": "^1.0.3"
   }
 }
