--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "adm-zip": "^0.5.9",
     "commander": "^3.0.2",
     "forge-server-utils": "^8.3.5",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "gl-matrix": "^3.4.3"
   }
 }
