--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "forge-convert-utils",
-  "version": "4.0.5",
-  "description": "Tools for converting Autodesk Forge file formats.",
+  "name": "svf-utils",
+  "version": "5.0.0",
+  "description": "Tools for working with the SVF format used by Autodesk Platform Services.",
   "main": "lib/index.js",
   "bin": {
-    "forge-convert": "./bin/forge-convert.js"
+    "svf-to-gltf": "./bin/svf-to-gltf.js"
   },
   "engines": {
     "node": ">=10.15.0"
@@ -16,19 +16,18 @@
   "author": "Petr Broz <petr.broz@autodesk.com>",
   "license": "MIT",
   "keywords": [
-    "autodesk",
-    "forge",
+    "autodesk-platform-services",
     "gltf",
     "typescript"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/petrbroz/forge-convert-utils.git"
+    "url": "git+https://github.com/petrbroz/svf-utils.git"
   },
   "bugs": {
-    "url": "https://github.com/petrbroz/forge-convert-utils/issues"
+    "url": "https://github.com/petrbroz/svf-utils/issues"
   },
-  "homepage": "https://github.com/petrbroz/forge-convert-utils#readme",
+  "homepage": "https://github.com/petrbroz/svf-utils#readme",
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/fs-extra": "^9.0.13",
@@ -37,9 +36,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@aps_sdk/authentication": "^0.1.0-beta.1",
+    "@aps_sdk/autodesk-sdkmanager": "^0.0.7-beta.1",
+    "@aps_sdk/model-derivative": "^0.1.0-beta.1",
     "adm-zip": "^0.5.9",
+    "axios": "^1.6.8",
     "commander": "^3.0.2",
-    "forge-server-utils": "^8.3.5",
     "fs-extra": "^10.0.0"
   }
 }
