--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
     "@types/fs-extra": "^9.0.13",
+    "@types/ws": "^8.5.14",
     "gltf-validator": "^2.0.0-dev.3.2",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
@@ -45,6 +46,7 @@
     "axios": "^1.6.8",
     "commander": "^3.0.2",
     "fs-extra": "^10.0.0",
-    "json-schema-to-typescript": "^15.0.3"
+    "json-schema-to-typescript": "^15.0.3",
+    "ws": "^8.18.0"
   }
 }
