--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svf-utils",
-  "version": "5.0.5",
+  "version": "5.0.5-svf2",
   "description": "Tools for working with the SVF format used by Autodesk Platform Services.",
   "main": "lib/index.js",
   "bin": {
@@ -38,19 +38,18 @@
     "@types/fs-extra": "^9.0.13",
     "@types/ws": "^8.5.14",
     "gltf-validator": "^2.0.0-dev.3.2",
+    "json-schema-to-typescript": "^15.0.3",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@aps_sdk/authentication": "^1.0.0-beta.1",
-    "@aps_sdk/autodesk-sdkmanager": "^1.0.0-beta.2",
-    "@aps_sdk/model-derivative": "^1.0.0-beta.3",
+    "@aps_sdk/authentication": "^1.0.0",
+    "@aps_sdk/model-derivative": "^1.0.0",
     "adm-zip": "^0.5.9",
     "ajv": "^8.17.1",
     "axios": "^1.6.8",
     "commander": "^3.0.2",
     "fs-extra": "^10.0.0",
-    "json-schema-to-typescript": "^15.0.3",
     "ws": "^8.18.0"
   }
 }
