--- a/package.json
+++ b/package.json
@@ -29,19 +29,18 @@
   },
   "homepage": "https://github.com/petrbroz/svf-utils#readme",
   "devDependencies": {
-    "@types/adm-zip": "^0.4.32",
-    "@types/fs-extra": "^9.0.13",
+    "@types/adm-zip": "^0.5.7",
+    "@types/fs-extra": "^11.0.4",
     "gltf-validator": "^2.0.0-dev.3.2",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5"
+    "typedoc": "^0.28.2",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@aps_sdk/authentication": "^1.0.0-beta.1",
-    "@aps_sdk/autodesk-sdkmanager": "^1.0.0-beta.2",
-    "@aps_sdk/model-derivative": "^1.0.0-beta.3",
+    "@aps_sdk/authentication": "^1.0.0",
+    "@aps_sdk/model-derivative": "^1.1.0",
     "adm-zip": "^0.5.9",
-    "axios": "^1.6.8",
+    "axios": "^1.8.4",
     "commander": "^3.0.2",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^11.3.0"
   }
 }
